Use better gc defaults for the server/tools